@@ -22,8 +22,4 @@ The number in both columns should match.
 -3L -3L
 -7L -7L
 
-3.0 3.0
--5.0 -5.0
--1.0 -1.0
--7.0 -7.0
 
